@@ -1,5 +1,11 @@
 2004-08-12  Michael Koch  <konqueror@gmx.de>
 
+	* javax/swing/plaf/basic/BasicToolBarUI.java
+	(BasicToolBarUI): Fixed arguments for constructor.
+	(createUI): Fixed creation of object.
+
+2004-08-12  Michael Koch  <konqueror@gmx.de>
+
 	* javax/swing/DefaultListSelectionModel.java
 	(fireValueChanged): Renamed from fireSelectionValueChanged,
 	made protected.
